--- a/slope/index.html
+++ b/slope/index.html
@@ -6,28 +6,28 @@
     <title>Slope Unblocked | Unblocked Games</title>
     <meta name="description" content="Play Slope Unblocked the ultimate 3D endless runner where speed, reflex, and precision matter! Roll your ball down neon tracks, avoid red obstacles, and chase high scores in this addictive unblocked game on GitHub.io.">
     <meta name="keywords" content="slope unblocked, slope unblocked games, slope unblocked game, slope unblocked gamez, github.io, unblocked games, play slope unblocked, slope 3D ball game, slope online, slope unblocked github">
-    <link rel="canonical" href="https://onlyszgames.github.io/slope" />
+    <link rel="canonical" href="https://fafgamess.github.io/slope" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
-    <meta property="og:title" content="Slope Unblocked | Master The Endless 3D Run" />
-    <meta property="og:description" content="Slope Unblocked offers intense 3D endless running. Control your ball, avoid red obstacles, and race down the abstract track. How far can you roll in this skill game?" />
-    <meta property="og:url" content="https://onlyszgames.github.io/slope" />
-    <meta property="og:image" content="https://onlyszgames.github.io/img/slope.png" />
+    <meta property="og:title" content="SSlope Unblocked | Unblocked Games" />
+    <meta property="og:description" content="Play Slope Unblocked the ultimate 3D endless runner where speed, reflex, and precision matter! Roll your ball down neon tracks, avoid red obstacles, and chase high scores in this addictive unblocked game on GitHub.io." />
+    <meta property="og:url" content="https://fafgamess.github.io/slope" />
+    <meta property="og:image" content="https://fafgamess.github.io/img/slope.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
-    <meta name="twitter:title" content="Slope Unblocked | Master The Endless 3D Run">
-    <meta name="twitter:description" content="Slope Unblocked offers intense 3D endless running. Control your ball, avoid red obstacles, and race down the abstract track. How far can you roll in this skill game?">
-    <meta name="twitter:image" content="https://onlyszgames.github.io/img/slope.png">
+    <meta name="twitter:title" content="Slope Unblocked | Unblocked Games">
+    <meta name="twitter:description" content="Play Slope Unblocked the ultimate 3D endless runner where speed, reflex, and precision matter! Roll your ball down neon tracks, avoid red obstacles, and chase high scores in this addictive unblocked game on GitHub.io.">
+    <meta name="twitter:image" content="https://fafgamess.github.io/img/slope.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "Slope",
-        "url": "https://onlyszgames.github.io/slope",
-        "description": "Slope Unblocked offers intense 3D endless running. Control your ball, avoid red obstacles, and race down the abstract track. How far can you roll in this skill game?",
+        "url": "https://fafgamess.github.io/slope",
+        "description": "Play Slope Unblocked the ultimate 3D endless runner where speed, reflex, and precision matter! Roll your ball down neon tracks, avoid red obstacles, and chase high scores in this addictive unblocked game on GitHub.io.",
         "genre": "Skill",
         "applicationCategory": "Game",
         "operatingSystem": "Web Browser",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://onlyszgames.github.io/img/slope.png"
+        "image": "https://fafgamess.github.io/img/slope.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -452,7 +452,7 @@ justify-content: center;}
 
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://onlyszgames.github.io/img/slope.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/slope.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
                     <div class="play-text">Play Slope</div>
@@ -465,7 +465,7 @@ justify-content: center;}
         </div>
 
         <div class="game-description">
-            <img src="https://onlyszgames.github.io/img/slope.png" alt="Slope
+            <img src="https://fafgamess.github.io/img/slope.png" alt="Slope
 Gameplay" class="game-description-image" title="Slope">
             <h2>🎢 About Slope</h2><p>Slope Unblocked is a legendary unblocked game that has become one of the most popular online challenges worldwide. You control a glowing green ball rolling down a steep slope filled with twists, turns, and traps. The faster you go, the harder it gets and the more addictive it becomes. This slope unblocked game runs on advanced physics, making every movement feel real and responsive. The neon-green world and futuristic city backdrop keep players immersed while the difficulty steadily increases. It’s not just about reflexes it’s about mastering momentum and balance. Players love Slope Unblocked because it’s easy to start but nearly impossible to master. Its smooth performance, minimal graphics, and endless replay value make it one of the top choices among unblocked games on GitHub.io.</p><h2>✨ Game Features of Slope Unblocked</h2><p>The Slope Unblocked game 🎢 may look simple, but it’s packed with addictive mechanics that keep you coming back for more. Each run in Slope Unblocked ⚡ feels unique, thanks to its procedurally generated slopes no two tracks are ever the same. With just two keys 🎮, you can steer your ball smoothly through a futuristic neon city 🌆 while mastering realistic physics and gravity 🧠 that make every move feel dynamic. Compete on global leaderboards 🏆 and test your reflexes as the speed increases every second. Whether you call it Slope Unblocked games, Slope Unblocked game, or Slope Unblocked gamez, one thing’s for sure it’s one of the most thrilling unblocked games you can play right now, even on GitHub.io</p><h3>Core Mechanics</h3><ul><li>Fast-paced 3D endless running gameplay.</li><li>Procedurally generated, unpredictable levels.</li><li>Simple one-button or two-button control system.</li><li>Global leaderboards for competition.</li><li>Smooth frame rate optimized for GitHub.io.</li></ul><h2>🕹️ How to Play Slope Unblocked</h2><p>In Slope Unblocked, your mission is simple survive as long as possible and aim for the highest score 🏆. You’ll need lightning-fast reflexes ⚡ and steady control to master this thrilling Slope Unblocked game. Use the A/D or Left/Right arrow keys ⌨️ to steer your ball as it races down the neon track. The ball accelerates automatically, so your timing and precision are everything. Stay alert and avoid the deadly red obstacles 🚫 one wrong move can end your run instantly. Try to stay near the center of the slope for better reaction time and make smooth, controlled movements 🎮 to maintain balance at high speeds. Oversteering is the quickest way to lose control, so focus on rhythm and flow. Once you get used to the increasing pace, Slope Unblocked becomes a hypnotic challenge that rewards skill, patience, and focus. Whether you’re playing on GitHub.io or browsing other unblocked games, this Slope Unblocked gamez experience delivers nonstop action and excitement</p>
             <div class="game-features">
@@ -523,7 +523,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/peppa-pig-basketball" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/peppa-pig-basketball.png" alt="Peppa Pig Basketball">
+                                <img src="https://fafgamess.github.io/img/peppa-pig-basketball.png" alt="Peppa Pig Basketball">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Peppa Pig Basketball</h3>
@@ -534,7 +534,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/dinosaur-game" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/dinosaur-game.png" alt="Dinosaur Game The Original Chrome Dino">
+                                <img src="https://fafgamess.github.io/img/dinosaur-game.png" alt="Dinosaur Game The Original Chrome Dino">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Dinosaur Game The Original Chrome Dino</h3>
@@ -545,7 +545,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/zombotag" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/zombotag.png" alt="Zombotag A Tense Multiplayer Survival Game">
+                                <img src="https://fafgamess.github.io/img/zombotag.png" alt="Zombotag A Tense Multiplayer Survival Game">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Zombotag A Tense Multiplayer Survival Game</h3>
@@ -556,7 +556,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/duck-life-4" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/duck-life-4.png" alt="Duck Life 4 Team Racing">
+                                <img src="https://fafgamess.github.io/img/duck-life-4.png" alt="Duck Life 4 Team Racing">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Duck Life 4 Team Racing</h3>
@@ -567,7 +567,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/real-cars-in-city" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/real-cars-in-city.png" alt="Real Cars In City Open World">
+                                <img src="https://fafgamess.github.io/img/real-cars-in-city.png" alt="Real Cars In City Open World">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Real Cars In City Open World</h3>
@@ -578,7 +578,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/extreme-car-parking" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/extreme-car-parking.png" alt="Extreme Car Parking Puzzle Driving">
+                                <img src="https://fafgamess.github.io/img/extreme-car-parking.png" alt="Extreme Car Parking Puzzle Driving">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Extreme Car Parking Puzzle Driving</h3>
@@ -589,7 +589,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/sling-drift" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/sling-drift.png" alt="Sling Drift A One-Touch Drifting Game">
+                                <img src="https://fafgamess.github.io/img/sling-drift.png" alt="Sling Drift A One-Touch Drifting Game">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Sling Drift A One-Touch Drifting Game</h3>
@@ -600,7 +600,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/soccer-random" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/soccer-random.png" alt="Soccer Random Physics Battles">
+                                <img src="https://fafgamess.github.io/img/soccer-random.png" alt="Soccer Random Physics Battles">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Soccer Random Physics Battles</h3>
@@ -611,7 +611,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/bubble-shooter" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/bubble-shooter.png" alt="Bubble Shooter">
+                                <img src="https://fafgamess.github.io/img/bubble-shooter.png" alt="Bubble Shooter">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Bubble Shooter</h3>
@@ -622,7 +622,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/fnf-vs-hatsune-miku" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/fnf-vs-hatsune-miku.png" alt="Fnf Vs Hatsune Miku Rhythm Battle">
+                                <img src="https://fafgamess.github.io/img/fnf-vs-hatsune-miku.png" alt="Fnf Vs Hatsune Miku Rhythm Battle">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Fnf Vs Hatsune Miku Rhythm Battle</h3>
@@ -633,7 +633,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/kart-race-3d" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/kart-race-3d.png" alt="Kart Race 3D Fast Racing">
+                                <img src="https://fafgamess.github.io/img/kart-race-3d.png" alt="Kart Race 3D Fast Racing">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Kart Race 3D Fast Racing</h3>
@@ -644,7 +644,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/age-of-war-2" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/age-of-war-2.png" alt="Age of War 2 Strategy Evolved">
+                                <img src="https://fafgamess.github.io/img/age-of-war-2.png" alt="Age of War 2 Strategy Evolved">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Age of War 2 Strategy Evolved</h3>
