--- a/tunnel-rush/index.html
+++ b/tunnel-rush/index.html
@@ -6,28 +6,28 @@
     <title>FAF Games | Tunnel Rush Unblocked</title>
     <meta name="description" content="Tunnel Rush Unblocked is a high-speed 3D avoidance game. Race through a colorful, abstract tunnel. Rotate the world to dodge oncoming barriers and obstacles.">
     <meta name="keywords" content="tunnel rush, tunnel rush unblocked, skill game, 3d game, avoidance game, racing game, fast-paced">
-    <link rel="canonical" href="https://onlyszgames.github.io/tunnel-rush" />
+    <link rel="canonical" href="https://fafgamess.github.io/tunnel-rush" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
-    <meta property="og:title" content="Tunnel Rush Unblocked" />
+    <meta property="og:title" content="FAF Games | Tunnel Rush Unblocked" />
     <meta property="og:description" content="Tunnel Rush Unblocked is a high-speed 3D avoidance game. Race through a colorful, abstract tunnel. Rotate the world to dodge oncoming barriers and obstacles." />
-    <meta property="og:url" content="https://onlyszgames.github.io/tunnel-rush" />
-    <meta property="og:image" content="https://onlyszgames.github.io/img/tunnel-rush.png" />
+    <meta property="og:url" content="https://fafgamess.github.io/tunnel-rush" />
+    <meta property="og:image" content="https://fafgamess.github.io/img/tunnel-rush.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
-    <meta name="twitter:title" content="Tunnel Rush Unblocked">
+    <meta name="twitter:title" content="FAF Games | Tunnel Rush Unblocked">
     <meta name="twitter:description" content="Tunnel Rush Unblocked is a high-speed 3D avoidance game. Race through a colorful, abstract tunnel. Rotate the world to dodge oncoming barriers and obstacles.">
-    <meta name="twitter:image" content="https://onlyszgames.github.io/img/tunnel-rush.png">
+    <meta name="twitter:image" content="https://fafgamess.github.io/img/tunnel-rush.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "Tunnel Rush",
-        "url": "https://onlyszgames.github.io/tunnel-rush",
-        "description": "Tunnel Rush Unblocked is a high-speed 3D avoidance game. Race through a colorful, abstract tunnel. Rotate the world to dodge oncoming barriers and obstacles.",
+        "url": "https://fafgamess.github.io/tunnel-rush",
+        "description": "TTunnel Rush Unblocked is a high-speed 3D avoidance game. Race through a colorful, abstract tunnel. Rotate the world to dodge oncoming barriers and obstacles.",
         "genre": "Skill",
         "applicationCategory": "Game",
         "operatingSystem": "Web Browser",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://onlyszgames.github.io/img/tunnel-rush.png"
+        "image": "https://fafgamess.github.io/img/tunnel-rush.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -453,7 +453,7 @@ justify-content: center;}
 
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://onlyszgames.github.io/img/tunnel-rush.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/tunnel-rush.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
                     <div class="play-text">Play Tunnel Rush</div>
@@ -466,7 +466,7 @@ justify-content: center;}
         </div>
 
         <div class="game-description">
-            <img src="https://onlyszgames.github.io/img/tunnel-rush.png" alt="Tunnel Rush
+            <img src="https://fafgamess.github.io/img/tunnel-rush.png" alt="Tunnel Rush
 Gameplay" class="game-description-image" title="Tunnel Rush">
             <h2>🌀 About Tunnel Rush</h2><p>Tunnel Rush is an intense, first-person 3D avoidance game loved by fans of unblocked games worldwide. You constantly move forward at high speed through an abstract, procedurally generated tunnel filled with spinning, sliding, and stationary barriers. Your goal is simple: avoid hitting any obstacles while keeping your focus sharp. The game is a true test of reflexes, hand-eye coordination, and pattern recognition. Its hypnotic, neon visuals and fast-paced gameplay create a mesmerizing experience that keeps players coming back. Tunnel Rush Unblocked is perfect for quick gaming sessions, and playing it on Tunnel Rush GitHub ensures smooth performance on Chromebooks, PCs, and mobile devices.</p><h2>✨ Game Features of Tunnel Rush</h2><p>Tunnel Rush Unblocked may seem simple at first, but it’s packed with exciting mechanics that make it both addictive and challenging ⚡. The game starts fast and only accelerates, testing your reflexes to the maximum. Its vibrant neon visuals 🎨 and contrasting colors make obstacles easy to spot while creating a hypnotic, immersive experience. Each run takes you through procedurally generated tunnels 🧠, ensuring that no two attempts are ever the same and offering endless replay value. The game features precision obstacles 🎯, from stationary walls to rotating barriers, requiring perfect timing and skill to survive. Compete for the highest scores on global leaderboards 🏆 and see how you measure up against players worldwide. Whether you’re searching for Tunnel Rush Unblocked games, Tunnel Rush Unblocked, or Tunnel Rush GitHub, this thrilling unblocked game guarantees nonstop adrenaline-pumping fun.</p><h3>Survival Tactics for Tunnel Rush</h3><ul><li>Look Ahead: Focus on upcoming obstacles, not the ones immediately in front of you.</li><li>Small Movements: Only move as much as needed to clear obstacles; over-steering can cause collisions.</li><li>Stay Centered: Return to the center or bottom of the tunnel after each obstacle for better positioning.</li><li>Stay Relaxed: Tension slows reflexes. Keep calm to maintain sharp reactions.</li></ul><h2>🕹️ How to Play Tunnel Rush Unblocked</h2><p>Playing Tunnel Rush Unblocked is simple but demands focus and quick reflexes ⚡. Your goal is to survive as long as possible while dodging obstacles in the endless 3D tunnel. Use the A/D or Left/Right arrow keys ⌨️ to rotate the tunnel and steer your viewpoint left or right. Forward movement is automatic, so timing and precision are everything. Avoid hitting any red barriers 🚫 one collision ends your run instantly. Stay near the center of the tunnel for better reaction time and make small, controlled movements 🎮 to navigate tight spaces. Oversteering is the quickest way to fail, so glide with rhythm and flow. Mastering these mechanics in Tunnel Rush Unblocked games ensures maximum scores and endless excitement. Whether you’re playing on GitHub.io or exploring other unblocked games, this Tunnel Rush GitHub version delivers nonstop, high-speed fun 🏆.</p>
             <div class="game-features">
@@ -524,7 +524,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/westoon" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/westoon.png" alt="Westoon The Ultimate Wild West Shooter">
+                                <img src="https://fafgamess.github.io/img/westoon.png" alt="Westoon The Ultimate Wild West Shooter">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Westoon The Ultimate Wild West Shooter</h3>
@@ -535,7 +535,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/pool-club" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/pool-club.png" alt="Pool Club A Realistic 8-Ball Simulation">
+                                <img src="https://fafgamess.github.io/img/pool-club.png" alt="Pool Club A Realistic 8-Ball Simulation">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Pool Club A Realistic 8-Ball Simulation</h3>
@@ -546,7 +546,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/fnf-vs-xe" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/fnf-vs-xe.png" alt="Fnf Vs Xe Rhythm Battle">
+                                <img src="https://fafgamess.github.io/img/fnf-vs-xe.png" alt="Fnf Vs Xe Rhythm Battle">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Fnf Vs Xe Rhythm Battle</h3>
@@ -557,7 +557,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/basket-champs" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/basket-champs.png" alt="Basket Champs The Ultimate Free-Throw Tourney">
+                                <img src="https://fafgamess.github.io/img/basket-champs.png" alt="Basket Champs The Ultimate Free-Throw Tourney">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Basket Champs The Ultimate Free-Throw Tourney</h3>
@@ -568,7 +568,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/monster-track-racing-arena" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/monster-track-racing-arena.png" alt="Monster Track Racing Arena Combat">
+                                <img src="https://fafgamess.github.io/img/monster-track-racing-arena.png" alt="Monster Track Racing Arena Combat">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Monster Track Racing Arena Combat</h3>
@@ -579,7 +579,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/bubble-shooter" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/bubble-shooter.png" alt="Bubble Shooter">
+                                <img src="https://fafgamess.github.io/img/bubble-shooter.png" alt="Bubble Shooter">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Bubble Shooter</h3>
@@ -590,7 +590,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/extreme-car-parking" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/extreme-car-parking.png" alt="Extreme Car Parking Puzzle Driving">
+                                <img src="https://fafgamess.github.io/img/extreme-car-parking.png" alt="Extreme Car Parking Puzzle Driving">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Extreme Car Parking Puzzle Driving</h3>
@@ -601,7 +601,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/cyber-cars-punk-racing" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/cyber-cars-punk-racing.png" alt="Cyber Cars Punk Racing 2 Player">
+                                <img src="https://fafgamess.github.io/img/cyber-cars-punk-racing.png" alt="Cyber Cars Punk Racing 2 Player">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Cyber Cars Punk Racing 2 Player</h3>
@@ -612,7 +612,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/bad-ice-cream-2" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/bad-ice-cream-2.png" alt="Bad Ice Cream 2 The Chilly Co-Op Sequel">
+                                <img src="https://fafgamess.github.io/img/bad-ice-cream-2.png" alt="Bad Ice Cream 2 The Chilly Co-Op Sequel">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Bad Ice Cream 2 The Chilly Co-Op Sequel</h3>
@@ -623,7 +623,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/subway-surfers-houston" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/subway-surfers-houston.png" alt="Subway Surfers Houston Space City">
+                                <img src="https://fafgamess.github.io/img/subway-surfers-houston.png" alt="Subway Surfers Houston Space City">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Subway Surfers Houston Space City</h3>
@@ -634,7 +634,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/panda-bubble-shooter" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/panda-bubble-shooter.png" alt="Panda Bubble Shooter A Classic Puzzle Game">
+                                <img src="https://fafgamess.github.io/img/panda-bubble-shooter.png" alt="Panda Bubble Shooter A Classic Puzzle Game">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Panda Bubble Shooter A Classic Puzzle Game</h3>
@@ -645,7 +645,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
                     <div class="game-card">
                         <a href="/bullet-force" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/bullet-force.png" alt="Bullet Force The Ultimate Online FPS">
+                                <img src="https://fafgamess.github.io/img/bullet-force.png" alt="Bullet Force The Ultimate Online FPS">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Bullet Force The Ultimate Online FPS</h3>
