--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -9,15 +9,15 @@
     <link rel="canonical" href="https://fafgamess.github.io/flappy-bird" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
-    <meta property="og:title" content="Flappy Bird Unblocked ~» The Infamous Flap-Fest" />
-    <meta property="og:description" content="Flappy Bird Unblocked is the famously difficult one-button arcade game. Tap to flap your bird's wings and navigate through a series of green pipes. Do not crash!" />
+    <meta property="og:title" content="FAF Games | Flappy Bird Unblocked />
+    <meta property="og:description" content="Flappy Bird Unblocked is the famously difficult one-button arcade game. Tap to flap your bird's wings and navigate through a series of green pipes. Do not crash! />
     <meta property="og:url" content="https://fafgamess.github.io/flappy-bird" />
     <meta property="og:image" content="https://fafgamess.github.io/img/flappy-bird.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
-    <meta name="twitter:title" content="Flappy Bird Unblocked ~» The Infamous Flap-Fest">
+    <meta name="twitter:title" content="FAF Games | Flappy Bird Unblocked">
     <meta name="twitter:description" content="Flappy Bird Unblocked is the famously difficult one-button arcade game. Tap to flap your bird's wings and navigate through a series of green pipes. Do not crash!">
     <meta name="twitter:image" content="https://fafgamess.github.io/img/flappy-bird.png">
     <link rel="icon" type="image/png" href="favicon.png">
