--- a/retro-bowl/index.html
+++ b/retro-bowl/index.html
@@ -9,7 +9,7 @@
     <link rel="canonical" href="https://fafgamess.github.io/retro-bowl" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
-    <meta property="og:title" content="Retro Bowl Unblocked | Manage Your Team" />
+    <meta property="og:title" content="FAF Games | Play Unblocked Games" />
     <meta property="og:description" content="Lead your team to glory in Retro Bowl Unblocked. This charming retro-style game puts you in charge as the coach and QB. Manage, draft, and win the Bowl!" />
     <meta property="og:url" content="https://fafgamess.github.io/retro-bowl" />
     <meta property="og:image" content="https://fafgamess.github.io/img/retro-bowl.png" />
@@ -17,7 +17,7 @@
     <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
-    <meta name="twitter:title" content="Retro Bowl Unblocked | Manage Your Team">
+    <meta name="twitter:title" content="FAF Games | Play Unblocked Games">
     <meta name="twitter:description" content="Lead your team to glory in Retro Bowl Unblocked. This charming retro-style game puts you in charge as the coach and QB. Manage, draft, and win the Bowl!">
     <meta name="twitter:image" content="https://fafgamess.github.io/img/retro-bowl.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
