--- a/super-mario-bros/index.html
+++ b/super-mario-bros/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAF Games – Play Unblocked Games Instantly in Your Browser</title>
+    <title>FAF Games | Play Unblocked Games Instantly in Your Browser</title>
     <meta name="description" content="Play Super Mario Bros Unblocked Online and relive the classic adventure of Mario and Luigi! Enjoy this legendary platformer game for free no downloads, no limits, just pure fun right in your browser.">
     <meta name="keywords" content="super mario bros unblocked, mario unblocked games, super mario bros online, play mario github, unblocked mario games, classic mario unblocked, mario bros unblocked online, mario browser game">
     <link rel="canonical" href="https://fafgamess.github.io/super-mario-bros/" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
-    <meta property="og:title" content="Super Mario Bros Unblocked ~» The NES Classic" />
-    <meta property="og:description" content="Super Mario Bros Unblocked is the original 8-bit NES classic. Play as Mario, run and jump through the Mushroom Kingdom, and save Princess Peach from Bowser." />
+    <meta property="og:title" content="FAF Games | Play Unblocked Games Instantly in Your Browser" />
+    <meta property="og:description" content="Play Super Mario Bros Unblocked Online and relive the classic adventure of Mario and Luigi! Enjoy this legendary platformer game for free no downloads, no limits, just pure fun right in your browser." />
     <meta property="og:url" content="https://fafgamess.github.io/super-mario-bros/" />
     <meta property="og:image" content="https://fafgamess.github.io/img/super-mario-bros.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@OnlySZGames">
-    <meta name="twitter:title" content="FAF Games | Play Unblocked Games">
-    <meta name="twitter:description" content="Super Mario Bros Unblocked is the original 8-bit NES classic. Play as Mario, run and jump through the Mushroom Kingdom, and save Princess Peach from Bowser.">
+    <meta name="twitter:title" content="FAF Games | Play Unblocked Games Instantly in Your Browser">
+    <meta name="twitter:description" content="Play Super Mario Bros Unblocked Online and relive the classic adventure of Mario and Luigi! Enjoy this legendary platformer game for free no downloads, no limits, just pure fun right in your browser.">
     <meta name="twitter:image" content="img/super-mario-bros.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">
@@ -27,7 +27,7 @@
         "@type": "Game",
         "name": "Super Mario Bros",
         "url": "https://fafgamess.github.io/super-mario-bros/",
-        "description": "Super Mario Bros Unblocked is the original 8-bit NES classic. Play as Mario, run and jump through the Mushroom Kingdom, and save Princess Peach from Bowser.",
+        "description": "Play Super Mario Bros Unblocked Online and relive the classic adventure of Mario and Luigi! Enjoy this legendary platformer game for free no downloads, no limits, just pure fun right in your browser.",
         "genre": "Platformer",
         "applicationCategory": "Game",
         "operatingSystem": "Web Browser",
