--- a/odd-bot-out/index.html
+++ b/odd-bot-out/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odd Bot Out – Play Unblocked Games Online in Fullscreen Mode</title>
-    <meta name="description" content="Play Odd Bot Out and other unblocked games instantly in fullscreen no downloads, no ads. Help the little robot escape puzzling levels and enjoy a fun, brain-teasing adventure!">
+    <title>Odd Bot Out | Play Unblocked Games</title>
+    <meta name="description" content="Odd Bot Out and other unblocked games instantly in fullscreen no downloads, no ads. Help the little robot escape puzzling levels and enjoy a fun, brain-teasing adventure!">
     <meta name="keywords" content="odd bot out, odd bot out unblocked, unblocked games, play odd bot out online, puzzle unblocked games, robot puzzle game, odd bot out browser game, free unblocked games, logic games online, odd bot out full screen">
     <link rel="canonical" href="https://fafgamess.github.io/odd-bot-out/" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
-    <meta property="og:title" content="Odd Bot Out Unblocked ~» A Unique Puzzle Escape" />
-    <meta property="og:description" content="Odd Bot Out Unblocked is a charming physics-puzzler. You are a bot who failed a test. Help this 'odd' bot escape the factory by solving 100 unique puzzle rooms." />
+    <meta property="og:title" content="Odd Bot Out | Play Unblocked Games" />
+    <meta property="og:description" content="POdd Bot Out and other unblocked games instantly in fullscreen no downloads, no ads. Help the little robot escape puzzling levels and enjoy a fun, brain-teasing adventure!" />
     <meta property="og:url" content="https://fafgamess.github.io/odd-bot-out/" />
     <meta property="og:image" content="https://szgames.github.io/img/odd-bot-out.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
-    <meta name="twitter:title" content="Odd Bot Out Unblocked | OnlySzGames">
-    <meta name="twitter:description" content="Odd Bot Out Unblocked is a charming physics-puzzler. You are a bot who failed a test. Help this 'odd' bot escape the factory by solving 100 unique puzzle rooms.">
+    <meta name="twitter:title" content="Odd Bot Out | Play Unblocked Games">
+    <meta name="twitter:description" content="Odd Bot Out and other unblocked games instantly in fullscreen no downloads, no ads. Help the little robot escape puzzling levels and enjoy a fun, brain-teasing adventure!">
     <meta name="twitter:image" content="https://fafgamess.github.io/img/odd-bot-out.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">
@@ -27,7 +27,7 @@
         "@type": "Game",
         "name": "Odd Bot Out",
         "url": "https://fafgamess.github.io/odd-bot-out/",
-        "description": "Odd Bot Out Unblocked is a charming physics-puzzler. You are a bot who failed a test. Help this 'odd' bot escape the factory by solving 100 unique puzzle rooms.",
+        "description": "Odd Bot Out and other unblocked games instantly in fullscreen no downloads, no ads. Help the little robot escape puzzling levels and enjoy a fun, brain-teasing adventure!",
         "genre": "Puzzle",
         "applicationCategory": "Game",
         "operatingSystem": "Web Browser",
