--- a/level-devil/index.html
+++ b/level-devil/index.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Play Level Devil Unblocked Online | GitHub.io Games</title>
-    <meta name="description" content="Play Level Devil Unblocked online on GitHub.io a fun and challenging rage platformer full of hidden traps and surprises. Test your skills, avoid spikes, and outsmart every level in one of the most addictive unblocked games you can play anywhere!">
+    <meta name="description" content="Level Devil Unblocked online on GitHub.io a fun and challenging rage platformer full of hidden traps and surprises. Test your skills, avoid spikes, and outsmart every level in one of the most addictive unblocked games you can play anywhere!">
     <meta name="keywords" content="level devil, level devil unblocked, level devil game, unblocked games, play unblocked games, level devil github, level devil online, rage games unblocked, troll platformer, github.io unblocked games">
-    <link rel="canonical" href="https://onlyonlyszgames.github.io/level-devil/" />
+    <link rel="canonical" href="https://fafgamess.github.io/level-devil/" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
-    <meta property="og:title" content="Level Devil Unblocked ~» The Unfair Platformer" />
-    <meta property="og:description" content="Level Devil Unblocked is a "troll" platformer. The game lies to you. Floors collapse, spikes appear, and the exit kills you. Memorize the traps to win." />
-    <meta property="og:url" content="https://onlyonlyszgames.github.io/level-devil/" />
-    <meta property="og:image" content="https://onlyonlyszgames.github.io/img/level-devil.png" />
+    <meta property="og:title" content="Play Level Devil Unblocked Online | GitHub.io Games" />
+    <meta property="og:description" content="Level Devil Unblocked online on GitHub.io a fun and challenging rage platformer full of hidden traps and surprises. Test your skills, avoid spikes, and outsmart every level in one of the most addictive unblocked games you can play anywhere!" />
+    <meta property="og:url" content="https://fafgamess.github.io/level-devil/" />
+    <meta property="og:image" content="https://fafgamess.github.io/img/level-devil.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
-    <meta name="twitter:title" content="Level Devil Unblocked ~» The Unfair Platformer">
-    <meta name="twitter:description" content="Level Devil Unblocked is a "troll" platformer. The game lies to you. Floors collapse, spikes appear, and the exit kills you. Memorize the traps to win.">
-    <meta name="twitter:image" content="https://onlyonlyszgames.github.io/img/level-devil.png">
+    <meta name="twitter:title" content="Play Level Devil Unblocked Online | GitHub.io Games">
+    <meta name="twitter:description" content="Level Devil Unblocked online on GitHub.io a fun and challenging rage platformer full of hidden traps and surprises. Test your skills, avoid spikes, and outsmart every level in one of the most addictive unblocked games you can play anywhere!">
+    <meta name="twitter:image" content="https://fafgamess.github.io/img/level-devil.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "Level Devil",
-        "url": "https://onlyonlyszgames.github.io/level-devil/",
-        "description": "Level Devil Unblocked is a "troll" platformer. The game lies to you. Floors collapse, spikes appear, and the exit kills you. Memorize the traps to win.",
+        "url": "https://fafgamess.github.io/level-devil/",
+        "description": "Level Devil Unblocked online on GitHub.io a fun and challenging rage platformer full of hidden traps and surprises. Test your skills, avoid spikes, and outsmart every level in one of the most addictive unblocked games you can play anywhere!",
         "genre": "Platformer",
         "applicationCategory": "Game",
         "operatingSystem": "Web Browser",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://onlyonlyszgames.github.io/img/level-devil.png"
+        "image": "https://fafgamess.github.io/img/level-devil.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -450,7 +450,7 @@ justify-content: center;}
 
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://onlyonlyszgames.github.io/img/level-devil.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/level-devil.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
                     <div class="play-text">Play Level Devil</div>
@@ -463,7 +463,7 @@ justify-content: center;}
         </div>
 
         <div class="game-description">
-            <img src="https://onlyonlyszgames.github.io/img/level-devil.png" alt="Level Devil
+            <img src="https://fafgamess.github.io/img/level-devil.png" alt="Level Devil
 Gameplay" class="game-description-image" title="Level Devil">
             <h2>😈 About Level Devil Play Unblocked Games on GitHub.io</h2><p>Level Devil Unblocked is a notorious puzzle-platformer that belongs to the troll or rage game genre. At first glance, it looks like a simple, innocent platformer, but don’t be fooled it’s designed to challenge your patience and sense of humor. The goal is to guide your character safely to the door at the end of each level. However, hidden traps are everywhere floors disappear, spikes pop out of nowhere, and even the finish line might be a trick. Among all unblocked games on github.io, Level Devil stands out for its creative design, testing your memory, timing, and calm under pressure.</p><h2>✨ Game Features Level Devil Unblocked</h2><p>The charm of Level Devil lies in its deceptive and clever level design. This game doesn’t just challenge your reflexes it challenges your expectations.</p><h3>How to Survive in Level Devil</h3><ul><li>Trust Nothing: Don’t believe the signs or your instincts they’ll trick you.</li><li>Memorize Everything: Every trap teaches you something new.</li><li>Be Patient: Rushing will only lead to failure.</li><li>Enjoy the Chaos: The fun lies in laughing at how unfair it gets.</li></ul><h2>🕹️ How to Play Level Devil Unblocked</h2><p>Playing Level Devil Unblocked is simple in controls but tricky in experience. You can move your character using the A and D keys or the Left and Right Arrow keys, and press W or the Up Arrow to jump. Your main goal is to reach the door at the end of each level, but beware this game is full of hidden surprises. The floor might collapse beneath you, spikes could appear out of nowhere, or falling blocks may suddenly drop from above. Each time you fail, you’ll learn something new about the level’s layout. Progress in Level Devil, available among the best unblocked games on github.io, depends on observation, patience, and quick reflexes. Keep practicing, memorize the traps, and enjoy the thrill of overcoming each deceptive challenge.</p>
             <div class="game-features">
